--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -3,10 +3,10 @@ name: Install
 on:
   push:
     branches:
-      - master
+      - dev
   pull_request:
     branches:
-      - master
+      - dev
 
 env:
   CTEST_OUTPUT_ON_FAILURE: 1
