--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -3,10 +3,10 @@ name: MacOS
 on:
   push:
     branches:
-      - master
+      - dev
   pull_request:
     branches:
-      - master
+      - dev
 
 env:
   CTEST_OUTPUT_ON_FAILURE: 1
