--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -3,10 +3,10 @@ name: Standalone
 on:
   push:
     branches:
-      - master
+      - dev
   pull_request:
     branches:
-      - master
+      - dev
 
 env:
   CPM_SOURCE_CACHE: ${{ github.workspace }}/cpm_modules
